[metadata]
name = ansible-iptables
summary = Ansible role for deploying iptables
description-file =
    README.md
author = Logan V.
author-email = logan2211@gmail.com
home-page = https://logan.protiumit.com
classifier =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[pbr]
warnerrors = True

[wheel]
universal = 1
